# lorcana-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  server.json
lorcana_mcp/: __init__.py  __main__.py  api.py  cache.py  deck.py  deckbuilder.py  enricher.py  server.py
tests/: test_api.py  test_cache.py  test_deck.py  test_deckbuilder.py  test_enricher.py  test_server.py
