[project]
name = "lorcana-mcp"
version = "0.1.6"
description = "MCP server for enriching Disney Lorcana TCG card collections from TCGPlayer exports"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Icaro Bichir", email = "icbichir1@gmail.com" }
]
keywords = ["mcp", "lorcana", "claude", "tcg", "disney", "card-game"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "click>=8.1.0",
]

[project.scripts]
lorcana-mcp = "lorcana_mcp.__main__:cli"

[project.urls]
Homepage = "https://github.com/IcaroBichir/lorcana-mcp"
Issues = "https://github.com/IcaroBichir/lorcana-mcp/issues"
Changelog = "https://github.com/IcaroBichir/lorcana-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["lorcana_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
